--- a/.env
+++ b/.env
@@ -5,5 +5,5 @@ DB_PASSWORD=engipass
 DB_HOST=localhost
 DB_PORT=5432
 ALLOWED_HOST_1=127.0.0.1
-ALLOWED_HOST_2=
+ALLOWED_HOST_2=65.109.14.195
 ALLOWED_HOST_3= 
