domain name added

--- a/.env
+++ b/.env
@@ -6,4 +6,4 @@ DB_HOST=localhost
 DB_PORT=5432
 ALLOWED_HOST_1=127.0.0.1
 ALLOWED_HOST_2=65.109.14.195
-ALLOWED_HOST_3=maha_engineering.in 
+ALLOWED_HOST_3=maha.engineering.in 
